# ontology

./: .gitignore  BFO_CCO_ALIGNMENT.md  CLAUDE.md  CONSOLIDATION_SUMMARY.md  DEPLOYMENT.md  Makefile  PHASE2_DESIGN.md  PHASE2_IMPLEMENTATION.md  README.md  README_PYTEST_MIGRATION.md  SCHEMA_GENERATION_DECISION.md  SCHEMA_ORG_ALIGNMENT.md  SUMMARY.md  TESTING.md  V4_DESIGN.md  V4_DESIGN_EXPLORATION.md  V4_TRANSITION_STATUS.md  VALIDATION_GUIDE.md  actions-context.owl  actions-ontology-v2.ttl  actions-shapes-v3.ttl  actions-shapes.ttl  actions-vocabulary.jsonld  actions-vocabulary.owl  actions-vocabulary.ttl  build_extensions.py  catalog-v001.xml  invalid-results.ttl  modeling_functionality_plan.md  next.actions  pyproject.toml  run_tests.py  semantic_contract_plan.md  tasks.py  tasks_backup.py  valid-results.ttl  wrangler.jsonc
.clearhead/: next.actions  next.completed.actions  next.completed.open.ttl  next.open.ttl
.clearhead/charters/: .next.json  next.actions  ontology.completed.actions
.well-known/: vocab-catalog.json
.wrangler/cache/: pages.json
docs/: README.md  SCHEMA_GENERATION.md  TESTING.md  TOOLCHAIN_ARCHITECTURE_PLAN.md  actions-implementation-guide.md  depth-property-design.md  hierarchical-relationships.md
docs/vocab-site/: _htaccess  index.html
docs/vocab-site/actions/: index.html
examples/: test_validation.py  valid-childaction.json
examples/v3/invalid/: invalid-priority.ttl  invalid-root-with-parent.ttl
examples/v3/valid/: actionprocess-execution.ttl
examples/v4/invalid/: circular-dependency.ttl  invalid-uuid-format.ttl  missing-completion-date.ttl
examples/v4/migrated/: simple-actionplan.ttl
examples/v4/valid/: ad-hoc-actions.ttl  all-phase-states.ttl  completed-task.ttl  comprehensive-example.ttl  context-hierarchy-example.ttl  hierarchical-plans.ttl  home-life-domain.ttl  ics-linked-schedule.ttl  ontology-out.jsonld  plan-with-objective.ttl  simple-plan-and-act.ttl
migrations/: V2_TO_V3_MIGRATION.md  V3_TO_V4_MIGRATION.md  v3_to_v4.py
ontology-backup-modular/: DEPLOYMENT_QUICKSTART.md  HOSTING_EXTENSIONS.md  SUMMARY.md  actions-roles.owl
queries/v4/basic/: acts-by-phase.sparql  all-plans-simple.sparql  all-plans.sparql  plans-with-contexts.sparql
queries/v4/planning/: agenda.sparql  dependency-chain.sparql  next-actions.sparql  schedule-series.sparql
queries/v4/productivity/: completion-velocity.sparql  overdue-tasks.sparql
schemas/: action.schema.json  actions-combined.schema.json  childaction.schema.json  leafaction.schema.json  rootaction.schema.json
schemas/jtd/: actioncontext.jtd.json  actionplan.jtd.json  actionprocess.jtd.json  actions-combined.jtd.json  actionstate.jtd.json  bfo_0000003.jtd.json  bfo_0000019.jtd.json  childactionplan.jtd.json  energycontext.jtd.json  leafactionplan.jtd.json  locationcontext.jtd.json  milestone.jtd.json  rootactionplan.jtd.json  socialcontext.jtd.json  toolcontext.jtd.json
scripts/: generate_json_schema.py  generate_jtd.py
site/: _headers  _redirects  index.html  nginx.conf
site/.well-known/: vocab-catalog.json
site/actions/: shapes.ttl
site/docs/: integration.html
site/vocab/: index.html
tests/: __init__.py  conftest.py  test_ontology_consistency.py  test_poc.py  test_shacl_validation.py  test_smart_validation.py  utils.py
tests/data/: invalid-examples.ttl  invalid-simple.ttl  valid-complex.ttl  valid-simple.ttl
tests/results/: basic-hierarchy-complete-result.ttl  basic-valid-complex-result.ttl  full-hierarchy-complete-result.ttl  invalid-basic-invalid-examples-result.ttl  invalid-basic-leaf-with-children-result.ttl  invalid-basic-missing-required-properties-result.ttl  invalid-basic-temporal-inconsistency-result.ttl  invalid-full-invalid-context-format-result.ttl  invalid-full-invalid-examples-result.ttl  invalid-full-missing-required-properties-result.ttl  invalid-full-root-with-parent-result.ttl  invalid-invalid-examples-result.ttl  invalid-invalid-simple-result.ttl  invalid-leaf-with-children-result.ttl  invalid-recurrence-both-termination-result.ttl  invalid-wrong-depth-sequence-result.ttl  missing-props-full-result.ttl  sparql-basic-leaf-with-children-result.ttl  sparql-basic-root-with-parent-result.ttl  sparql-basic-wrong-depth-sequence-result.ttl  specific-invalid-invalid-priority-result.ttl  specific-invalid-leaf-with-children-result.ttl  specific-invalid-root-with-parent-result.ttl  temporal-inconsistency-result.ttl  valid-valid-complex-result.ttl
tests/scripts/: setup-validation.sh  validate-detailed.sh
tests/tests/: test-runner.sh
tests/v3/: test_shacl_validation.py
tests/v4/: test_actions_context.py  test_ontology_out_validation.py  test_shacl_examples.py
v2/: CLAUDE.md  LESSONS_LEARNED.md  ONTOLOGY.md  PHASE2_IMPLEMENTATION.md  README.md  actions-vocabulary.rdf  actions-vocabulary.ttl  pyproject.toml  tasks.py
v2/tests/: conftest.py  test_owl_reasoning.py
v3/: BFO_CCO_ALIGNMENT.md  CONSOLIDATION_SUMMARY.md  READABILITY_IMPROVEMENTS.md
v4/: ONTOLOGY_OUT_CONTRACT.md  actions-shapes-v4.ttl  actions-vocabulary.owl  actions.context.json  actions.schema.json  catalog-v001.xml
workers/content-negotiation/: README.md  worker.js  wrangler.jsonc
workspace/v1/: workspace-vocabulary.owl
(+74 files in other folders)
